<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- VERSION NO -->

    <TextView
        android:id="@+id/tvVersionNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.7"
        android:text="@string/text_label_version"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvVersionNo"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color107EFD"
                android:hint="@string/edit_text_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/color107EFD"
                android:hint="@string/edit_text_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="UnusedAttribute" />

        </android.support.design.widget.TextInputLayout>

        <!-- REMEMBER ME LABEL -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_remember_me"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- LOGIN BUTTON -->

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_btn_shape_e75200"
            android:text="@string/btn_text_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <!-- NOT ACCOUNT YET OPTION -->

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:textStyle="italic|bold"
            android:text="@string/text_no_acc_yet"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>