<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- SUPPORT TOOL BAR FOR TITLE AND BACK ARROW -->

    <android.support.v7.widget.Toolbar
        android:id="@+id/tbSignup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color107EFD"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:titleTextColor="@android:color/white"
        app:layout_collapseMode="pin"
        app:title="@string/toolbar_tile_signup"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbSignup"
        android:layout_margin="15dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color107EFD"
                android:hint="@string/edit_text_uname"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color107EFD"
                android:hint="@string/edit_text_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color107EFD"
                android:hint="@string/edit_text_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color107EFD"
                android:hint="@string/edit_text_cpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                tools:targetApi="lollipop" />

        </android.support.design.widget.TextInputLayout>

        <!-- SIGN UP PROFILE -->

        <Button
            android:id="@+id/btSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/ic_btn_shape_e75200"
            android:text="@string/btn_text_signup"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>