<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".ui.fragments.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llAddEmployee"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp"
                app:cardBackgroundColor="@color/color107EFD"
                card_view:cardCornerRadius="4dp"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add_emp_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/nav_add_emp_payroll"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llListEmployee"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp"
                app:cardBackgroundColor="@color/color107EFD"
                card_view:cardCornerRadius="4dp"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_list_emp_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/nav_list_payroll"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp"
                app:cardBackgroundColor="@color/color107EFD"
                card_view:cardCornerRadius="4dp"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_profile_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/nav_profile"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="5dp"
                app:cardBackgroundColor="@color/color107EFD"
                card_view:cardCornerRadius="4dp"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_logout_white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/nav_logout"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>